--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "server-only": "0.0.1",
     "ts-pattern": "^5",
     "zod": "^3",
-    "zustand": "^4"
+    "zustand": "^4",
+    "next-auth": "^4.24.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
